5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1637_2703.log
== TEST (2019-04-09 10:12:01) 
-- CODE:
p = int(input("idade da pessoa: "))

if (p => 18):
	print("eleitor")
else:
	print("nao eleitor")
-- ERROR:
File "XXXX", line 3
    if (p => 18):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:12:09) 
-- CODE:
p = int(input("idade da pessoa: "))

if (p >= 18):
	print("eleitor")
else:
	print("nao eleitor")
-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:12:14) 
-- CODE:
p = int(input("idade da pessoa: "))

if (p >= 18):
	print("eleitor")
else:
	print("nao eleitor")
-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:12:19) 
-- CODE:
p = int(input("idade da pessoa: "))

if (p >= 18):
	print("eleitor")
else:
	print("nao eleitor")
-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:12:22) 
-- CODE:
p = int(input("idade da pessoa: "))

if (p >= 18):
	print("eleitor")
else:
	print("nao eleitor")
-- EXECUTION TIME:
0.158101
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:13:26) 
-- CODE:
p = int(input("idade da pessoa: "))

if (p >= 18):
	voto = "eleitor"
else:
	voto = "nao eleitor"
	
print(voto.lower())
-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:13:31) 
-- CODE:
p = int(input("idade da pessoa: "))

if (p >= 18):
	voto = "eleitor"
else:
	voto = "nao eleitor"
	
print(voto.lower())
-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:13:34) 
-- CODE:
p = int(input("idade da pessoa: "))

if (p >= 18):
	voto = "eleitor"
else:
	voto = "nao eleitor"
	
print(voto.lower())
-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:13:39) 
-- CODE:
p = int(input("idade da pessoa: "))

if (p >= 18):
	voto = "eleitor"
else:
	voto = "nao eleitor"
	
print(voto.lower())
-- EXECUTION TIME:
0.155269
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:13:50) 
-- CODE:
p = int(input("idade da pessoa: "))

if (p >= 18):
	voto = "eleitor"
else:
	voto = "nao_eleitor"
	
print(voto.lower())
-- EXECUTION TIME:
0.115675
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
